--- a/kitty.conf
+++ b/kitty.conf
@@ -1,7 +1,7 @@
 # ==============================================================================
 #  FONTS
 # ==============================================================================
-font_family      FiraCode Nerd Font Bold
+font_family      FiraCode Nerd Font SemBd
 bold_font        auto
 italic_font      auto
 bold_italic_font auto
